Improve the animations   If you click through before the previous animation is  finished,     we immediately end it.   If you were always waiting beore you hit next,     you will see no changes.   Sometimes something invisible was moving.     So it looks like a bug!     Now it makes more sense.

--- a/docs/AztecTiles.css
+++ b/docs/AztecTiles.css
@@ -35,6 +35,9 @@ body {
   transition: top 1s, left 2s;
   transition-timing-function: cubic-bezier(0.065, 0.605, 0.895, 0.240);
 }
+.disable-transitions > .animation-panel {
+  transition: none;
+}
 .tile {
   border: calc(15vmin/var(--cells)) solid;
   box-sizing: border-box;
@@ -73,4 +76,8 @@ body {
 @keyframes fadeIn {
   from { opacity: 0;}
   to {opacity: 1;}
+}
+.invisible {
+  color: transparent;
+  position: absolute;
 }
